[package]
name = "coordinates-2d"
authors = ["Mike Chambers <mikechambers@gmail.com>"]
repository="https://github.com/mikechambers/bevy-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy="0.8.1"
